# bw_timex

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  12 - Edge extractor.ipynb  =1.0.0  CHANGES.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Edge replacer.ipynb  FUNDING.md  LICENSE  README.md  codecov.yml  edge_extractor.py  environment.yml  medusa_hydrogen_example.ipynb  medusa_tools.py  paper.md  project-adeline.ipynb  pyproject.toml  requirements.txt  setup.py  test.ipynb  test_TD_at_two_consecutive_processes.ipynb  test_amounts.ipynb  test_background_dbs_2.ipynb  test_issue6.ipynb  test_temporal_groupings.py  tictac-environment.yaml  timex-environment.yaml  utils.py
.github/workflows/: draft-pdf.yml  manual-python-package-deploy.yml  python-package-deploy.yml  python-test.yml
Case study/: CaseStudy1_definitive TD with SSP2-1150 scenario.ipynb  wind-example_LCI_TD_.ipynb  wind-example_LCI_TD_step2.ipynb
Mini-Wind-Example/: Fly ash usage model.ipynb  utilities.py  utils.py  wind-example-clean.ipynb  wind-example.ipynb
app/: __init__.py  app.py  run_app.py  serve_demo.py  simple_app.py
app/modeling/: __init__.py  calculation_setup.py  timeline_view.py
app/results/: __init__.py  lci_results.py  lcia_results.py
app/static/: demo.html  styles.css
archive/Case study/: CaseStudy1_definitive TD with SSP2-1150 scenario foreground integration.ipynb  CaseStudy1_definitive TD with SSP2-1150 scenario.ipynb  (+2 more)
binder/: environment.yml
bw_timex/: SetList.py  __init__.py  _lci_cache.py  dynamic_biosphere_builder.py  dynamic_biosphere_builder_from_timeline.py  dynamic_characterization.py  edge_extractor.py  helper_classes.py  matrix_modifier.py  performance.py  premise_temporal.py  pydantic_classes.py  timeline_builder.py  timex_lca.py  utils.py  validation.py
conda/: build_upload.sh  meta.yaml
conda-forge-recipes/: README.md
dev/: Example_long_timeline_dev_version.ipynb  Example_notebook_dev_version.ipynb  Multi-level-tds.ipynb  calculate_metrics.ipynb  example_setac_EV_debugging.ipynb  issue_scores_with_biosphere_in_background.ipynb  run_time_test_databases.ipynb  test_amounts.ipynb  waste.ipynb  your_own_timex_lca.ipynb
docs/: AllEdgeExtractor.md  conf.py  environment.yaml  index.md  priority_first_traversal.md  requirements.txt  tutorial.rst
joss/: paper.bib  paper.md
jupyter_execute/: example_docs.ipynb
medusa/: __init__.py  dynamic_biosphere_builder.py  dynamic_characterization.py  edge_extractor.py  matrix_modifier.py  medusa_lca.py  remapping.py  timeline_builder.py  utils.py
notebooks/: #55_notebook.ipynb  background_temporalization.ipynb  background_temporalization_premise.ipynb  bioflows_advanced.ipynb  bioflows_dynamic_charactization.ipynb  classify.ipynb  correct.xlsx  dds_autumnschool_example_electric_vehicle_standalone.ipynb  example.ipynb  example_29032024.ipynb  example_EV_lifecycle.ipynb  example_EV_setac.ipynb  example_EV_timo.ipynb  example_EV_timo_incl_car.ipynb  example_battery_cascade.ipynb  example_biosphere3_positive_and_negative_CO2.ipynb  example_databases.py  example_electric_vehicle_fleet.ipynb  example_electric_vehicle_fleet_explicit_process_product.ipynb  example_electric_vehicle_premise.ipynb  example_electric_vehicle_standalone.ipynb  example_minimal.ipynb  example_premise_background.ipynb  example_premise_dummy_background.ipynb  example_premise_temporal_distributions.ipynb  example_setac.ipynb  example_setac_patchwork.ipynb  example_simple_dynamic_characterization.ipynb  example_simple_dynamic_charactization.ipynb  getting_started.ipynb  getting_started_minimal.ipynb  hashed.xlsx  heat_test.xlsx  issue_dynamic_bioflows.ipynb  issue_scores_with_biosphere_in_background.ipynb  multibranch_timeline_fix.ipynb  paper_case_study.ipynb  profile_data.prof  project-adeline.ipynb  run_time_test_benchmarking.ipynb  (+12 more)
tests/: conftest.py  databases.py  db_electrolysis.py  demonstration_non_unitary_foreground.ipynb  test_absolute_rtd_supply_chain.py  test_all_edge_extractor.py  test_amounts.py  test_background_production_td.py  test_background_temporal_distributions.py  test_background_traversal.py  test_bioflows.py  test_demand_temporal_distribution.py  test_dynamic_biomatrix_construction.py  test_dynamic_characterization.py  test_dynamic_characterization_time_errors.py  test_edge_extractor.py  test_edge_extractor_priority_first.py  test_electric_vehicle.py  test_electric_vehicle_explicit.py  test_explicit_process_product_end_to_end.py  test_helper_classes.py  test_lci_cache.py  test_nonunitary_unitprocess  test_nonunitary_unitprocess.py  test_performance_pipeline.py  test_premise_temporal.py  test_process_at_base_database_time.py  test_scores.py  test_signs.py  test_simple_dynamic_characterization.py  test_starting_datetime.py  test_substitution_exchanges.py  test_temporal_distributions.py  test_temporal_evolution.py  test_temporal_grouping.py  test_timeline_builder.py  test_timex_lca.py  test_utils.py  test_utils_memoization.py
timex_lca/: __init__.py  dynamic_biosphere_builder.py  dynamic_characterization.py  edge_extractor.py  matrix_modifier.py  medusa_lca.py  remapping.py  timeline_builder.py  timex_lca.py  utils.py
(+88 files in other folders)
