[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bw_timex"
authors = [
  { name="Timo Diepers", email="timo.diepers@ltt.rwth-aachen.de"},
  { name="Amelie Müller", email="a.muller@cml.leidenuniv.nl"},
  { name="Arthur Jakobs", email="artos.jakobs@psi.ch"},
]
maintainers = [
  { name="Timo Diepers", email="timo.diepers@ltt.rwth-aachen.de"},
  { name="Amelie Müller", email="a.muller@cml.leidenuniv.nl"},
  { name="Arthur Jakobs", email="artos.jakobs@psi.ch"},
]

description = "Time-explicit Life Cycle Assessment"
keywords= ["brightway", "Life Cycle Assessment", "LCA", "time-explicit", "dynamic", "prospective"]
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
    "bw2calc==2.3.2",
    "bw2data==4.5.4",
    "bw_graph_tools>0.4",
    "numpy",
    "pandas",
    "tqdm",
    "bw_temporalis>=1.1",
    "dynamic_characterization>=1.2.0",
    "matplotlib",
    "seaborn",
    "loguru",
    "ipython",
    "ipywidgets",
]

[project.urls]
source = "https://github.com/brightway-lca/bw_timex"
homepage = "https://github.com/brightway-lca/bw_timex"
tracker = "https://github.com/brightway-lca/bw_timex/issues"

[project.optional-dependencies]
testing = [
    "setuptools",
    "pytest",
    "pytest-cov",
]

dev = [
    "pre-commit",
    "pylint",
]

docs = [
  "ipython",
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-click",
  "sphinx-design",
  "sphinx-notfound-page",
  "sphinx-favicon",
  "sphinx-copybutton",
  "sphinx-autobuild"
]

[tool.setuptools]
license-files = ["LICENSE"]
package-data = {bw_timex = ["*.md", "*.txt", "data/*.json"]}
package-dir = { "" = "."}
packages = [
    "bw_timex",
]

[tool.setuptools.dynamic]
version = {attr = "bw_timex.__version__"}

[tool.pytest.ini_options]
addopts = "--cov bw_timex --cov-report term-missing --verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests/*.py"]

[tool.devpi.upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = "bdist_wheel"

[tool.flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 100
extend_ignore = ["E203", "W503"]
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]
